# MobileRoboter-MORO

./: README.md
task1/: README.md  task1.py  transformations.py
task1/test/: test_task1.py  test_transformations.py
task2/: README.md  task2.py
task2/test/: test_task2.py
task3/: README.md
task3/my_jk_rollin_kinematics/: package.xml  setup.cfg  setup.py
task3/my_jk_rollin_kinematics/my_jk_rollin_kinematics/: conversion.py  jk_rollin_arm_ik.py  jk_rollin_draw_circle.py  robot.py  transformations.py
task3/py_pubsub/: package.xml  setup.py
task3/py_pubsub/py_pubsub/: publisher.py  subscriber.py
task3/task3_tests/: package.xml  setup.cfg  setup.py
task3/task3_tests/test/: test_jk_rollin_arm_ik.py  test_jk_rollin_draw_circle.py  test_talker.py
task4/: README.md
task4/my_diffdrive_kinematics/: package.xml  setup.cfg  setup.py
task4/my_diffdrive_kinematics/config/: default_path.yaml  follower_config.yaml
task4/my_diffdrive_kinematics/launch/: approach_goal.launch.py  curve_drive.launch.py  follow_line.launch.py  generate_path.launch.py  rviz.launch.py  straight_drive.launch.py
task4/my_diffdrive_kinematics/my_diffdrive_kinematics/: approach_goal.py  curve_drive.py  generate_path.py  line_follower.py  straight_drive.py
task4/my_diffdrive_kinematics/rviz/: generate_path.rviz
task5/: README.md
task5/my_basic_kinematics/: package.xml  setup.cfg  setup.py
task5/my_basic_kinematics/my_basic_kinematics/: plot_odom.py  probabilistic_diffdrive.py  visual_servoing.py
task5/task5_tests/: package.xml  setup.cfg  setup.py
(+1 files in other folders)
