<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_jk_rollin_kinematics</name>
  <version>0.0.0</version>
  <description>Inverse Kinematic calculation for jk_rollin</description>
  <maintainer email="ro161klo@htwg-konstanz.de">ro161klo</maintainer>
  <maintainer email="re391kar@htwg-konstanz.de">re391kar</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>transformations</exec_depend>
  <exec_depend>conversion</exec_depend>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
